src/1.0/prof_ap_cim.adoc
{% macro curietouri(curie) -%}
    {%- set prefix, name = curie.split(":") -%}
    {{ prefixes[prefix] ~ name }}
{%- endmacro %}

{% macro link_curie(curie) -%}
    {%- set uri = curietouri(curie) -%}
    {{ uri ~ "[`" ~ curie ~ "`]" }}
{%- endmacro %}

{% macro cardinalities(slot) -%}
    {%- if slot.required and not slot.multivalued -%}
    (1)
    {%- elif slot.required and slot.multivalued -%}
    (1..*)
    {%- elif not slot.required and slot.multivalued -%}
    (0..*)
    {%- elif not slot.required and not slot.multivalued -%}
    (0..1)
    {%- endif -%}
{%- endmacro %}

= {% if title %}{{ title }}{% else %}{{ name }}{% endif %}
:sectnums:
:page-spectype: Application Profile

{% if description -%}
{{ description }}
{%- endif %}

'''

[#metadata]
****
This version:: {{ id }}[{{ id }}]
Version number:: {page-component-display-version} (draft)
Version of:: {{ instantiates }}[{{ instantiates }}]
Conforms to:: {{ conforms_to }}
License:: {{ license }}
Authors::
[unstyled]
* mailto:bart.kleijngeld@alliander.com[Bart Kleijngeld (Alliander)]
Artifacts:: xref::attachment$prof_ap_cim.shacl.ttl[SHACL (Turtle),window=read-later] | xref::attachment$prof_ap_cim.linkml.yml[LinkML (YAML),window=read-later] | xref::attachment$prof_ap_cim.context.jsonld[JSON-LD context (JSON-LD),window=read-later]
****

== Introduction

This is an application profile of PROF for defining CIM profiles.

== Conformance

The following sections are normative with regards to complying to this specification:

* <<_schema>>

== Terminology

application profile:: A specification that constrains, extends, combines, or provides guidance or explanation about the usage of other specifications.

== Schema

.Schema
[d2,width=70%]
----
vars { d2-config.pad: 0 }
direction: down
{% for class_name, class_ in classes.items() %}
{{class_name}}: "{{ class_name }} <<{{ class_.class_uri }}>>" {
  shape: sql_table
  {% for attr_name, attr in class_.attributes.items() -%}
  {%- if attr.range not in classes -%}
  "{{ attr_name }}": {{ attr.slot_uri}} {constraint: {{ attr.range }} {{ cardinalities(attr) }}}
  {% endif -%}
  {% endfor %}
}
{% for attr_name, attr in class_.attributes.items() -%}
{%- if attr.range in classes -%}
"{{ class_name }}" -> "{{ attr.range }}": {{ attr_name }}
{% endif -%}
{% endfor %}
{% endfor %}
----

=== Namespaces

.Vocabulary CURIEs
[cols="1,5"]
|===
| Prefix | URI
{% for prefix, uri in prefixes.items() %}
| `{{ prefix }}`
| {{ uri }}[{{ uri }}]
{% endfor %}
|===

{% for class_name, class_ in classes.items() -%}
=== Class: {{ class_name }}
[horizontal]
URI:: {{ link_curie(class_.class_uri) }}

{% if class_.description %}{{ class_.description }}{% endif %}

{% for attr_name, attr_ in class_.attributes.items() -%}
{% if loop.first %}
.Profile properties
[cols="1,1,3"]
|===
| Property | Type | Description

{% endif %}
| {{ curietouri(attr_.slot_uri) }}[`{{ attr_name }}`, title={{attr_.slot_uri}}]
a|
[unstyled]
* `{{ attr_.range }}`
* {{ cardinalities(attr_) }}
| {{ attr_.description }}
{% if loop.last %}
|===
{% endif %}
{% endfor %}

{% endfor %}


[nonum]
== Appendix A: Diagram Layout profile example

Any RDF serialization will do for profile instances, but it is recommended to make us of the xref::attachment$prof_ap_cim.context.jsonld[JSON-LD context,window=read-later]
and write using YAML.

.Source code (YAML-LD)
[%collapsible]
====
[source,yaml]
----
include::attachment$examples/diagram_layout_ap.yml[]
----
====

Note how the user does not need to write any URIs or CURIEs by hand. Moreover, all the `@` characters which indicate special JSON-LD syntax have been aliased
such that the user won't be confused by them.

This YAML can trivially be converted to JSON, rendering a valid JSON-LD serialization of the profile instance:

.Source code (JSON-LD)
[%collapsible]
====
[source,json]
----
include::attachment$examples/diagram_layout_ap.jsonld[]
----
====

[nonum]
== Appendix B: Validating profiles

